# quantforge

./: .env.example  .gitignore  CLAUDE.md  README.md  pyproject.toml
.claude/: settings.local.json
Docs/: unified-quant-system-architecture.md
scripts/: generate_report.py  run_backtest.py  run_paper_trading.py  train_agent.py
src/backtest/: engine.py  metrics.py  report.py  walk_forward.py
src/data/: base.py  cache.py  features.py  yahoo.py
src/execution/: base.py
src/portfolio/: base.py  film_conditioning.py  iqn_agent.py  optimizer.py  position_sizer.py  rebalancer.py  risk_manager.py
src/signals/: base.py  ensemble.py  hmm_regime.py  itransformer.py  kalman_pairs.py  momentum.py  montecarlo.py
tests/: conftest.py
tests/integration/: test_backtest_pipeline.py  test_data_pipeline.py  test_portfolio_pipeline.py  test_signal_pipeline.py
tests/test_backtest/: test_engine.py  test_metrics.py  test_report.py  test_walk_forward.py
tests/test_data/: test_base.py  test_cache.py  test_features.py  test_yahoo.py
tests/test_execution/: test_base.py
tests/test_portfolio/: test_base.py  test_film_conditioning.py  test_iqn_agent.py  test_optimizer.py  test_position_sizer.py  test_rebalancer.py  test_risk_manager.py
tests/test_signals/: test_base.py  test_ensemble.py  test_hmm_regime.py  test_itransformer.py  test_kalman_pairs.py  test_momentum.py  test_montecarlo.py
