[build-system]
requires = ["setuptools>=75.0", "wheel"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "quantforge"
version = "0.1.0"
description = "Unified quantitative trading system for research, backtesting, and paper trading"
authors = [{ name = "Vignesh Pai" }]
requires-python = ">=3.13"
dependencies = [
    "torch>=2.0",
    "numpy>=1.26",
    "pandas>=2.2",
    "scikit-learn>=1.5",
    "hmmlearn>=0.3",
    "yfinance>=0.2",
    "fredapi>=0.5",
    "alpaca-py>=0.21",
    "pydantic>=2.0",
    "pyyaml>=6.0",
    "streamlit>=1.30",
    "plotly>=5.18",
    "httpx>=0.27",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "ruff>=0.4",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[tool.ruff]
target-version = "py313"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]
